# own_package

./: .coveragerc  .gitignore  .gitmodules  README.md  pyproject.toml  setup.py  setup_legacy.py
own_package/: __init__.py
own_package/arepo/: data_read.py
own_package/athena/: athena.py  clump_size.py  clump_size_batch.sh  clump_size_plot.py  cup_render.py  data_read.py  debug.py  filament.py  filament_time.py  front_velocity.py  history.py  image_2d.py  job_script_laplace.sh  log_clump_1  log_clump_2  log_clump_3  log_clump_5  plot_script.py  render.py  shear.py  snapshot.py  turbulence.py
own_package/computing/: coloumb.py  fractal.py  pde.py
own_package/cooling/: cooling_fit_gen.py  cooling_fn.py  full_cooling_function_fit.py  power_law_file.py  power_law_fit_Z_1.0 copy.txt  power_law_fit_Z_1.0.txt  power_law_fit_max.py  units.py
own_package/data_analysis/: array_operations.py  clump_analysis.py  clump_count.py  clump_finder.py  clump_morphology.py  coherence.py  data_read.py  filament.py  helpers.py  peak_recog.py  streamlines.py  structure_tensor.py  structure_tensor_own.py  turbulence.py  velocity.py  yt_parallel.py
own_package/plot/: axes.py  color.py  combine.py  image_reverse.py  legend.py  marker.py  parallel.py  plot_2d.py  plot_2d_image.py  plot_2d_line.py  plot_3d.py  plot_dict.py  plot_histogram.py  plot_style.mplstyle  projection_render.py  render_example.py  text.py  video.py
own_package/pluto/: clump_vs_t.py  data_read.py  isochoric_collapse.py  lamfn.py  snap_image.py  snapshot_analysis.py  units.py
own_package/test/: Turb.hst  (+4 more)
(+189 files in other folders)
