[project]
name = "own-package"
version = "0.1.0"
description = "Python package with all the code that I frequently use"
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
norecursedirs = "__pycache__"
